# hexfow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  debug_utils.py  docker-compose-production.yml  docker-compose.yml  entrypoint.sh  init_db.py  manage.py  pyproject.toml
client/: common.css  index.html  package-lock.json  package.json  vite.config.ts
client/army-editor/: index.html
client/map-editor/: index.html
client/play/: index.html
client/src/: gameClient.ts  geometry.ts  images.ts  main.tsx  (+3 more)
events/: eventsystem.py
frontend/: package-lock.json  package.json  tsconfig.json  urls.py
game/: core.py  decision_points.py  decisions.py  descriptions.py  events.py  has_effects.py  hex_statuses.py  identification.py  interface.py  player.py  schemas.py  statuses.py  target_profiles.py  targeting.py  turn_order.py  urls.py  values.py  views.py
game_server/: exceptions.py  game_types.py  games.py  main.py  scenario_spec.json  scenarios.py  setup.py  testing.py
hexfow/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
ipython_profile/: startup.py
migrations/: env.py  script.py.mako
model/: engine.py  grouping.py  models.py  schemas.py  values.py
nginx/: production.conf
note_utils/: sort.py  sort_blueprints.py
notes/: creatures.txt  feedback.txt  interesting_creatures.txt  noteable_creatures.txt  notes.txt  rules.txt  rules_creatures.txt  statuses.txt  terrain.txt  todo.txt
server/: main.py  server.py  web_server.py
utils/: decorators.py
web_server/: main.py  schemas.py
(+164 files in other folders)
