[tool.poetry]
name = "hexfow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
#django = "^4.2.3"
pytest = "^7.4.0"
#channels = {extras = ["daphne"], version = "^4.0.0"}
#django-rest-framework = "^0.1.0"
pydantic = "^2.10.6"
bidict = "^0.23.1"
frozendict = "^2.4.6"

[tool.poetry.dev-dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
