[tool.poetry]
name = "hexfow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pydantic = "^2.10.6"
bidict = "^0.23.1"
frozendict = "^2.4.6"
fastapi = {extras = ["standard"], version = "^0.115.12"}
websockets = "^15.0.1"
sqlalchemy = "^2.0.41"
psycopg2 = "^2.9.10"
dotenv = "^0.9.9"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
watchdog = "^6.0.0"
poetry = "^2.1.3"
ipython = "^9.4.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.ruff.lint.per-file-ignores]
"game_types.py" = ["F405", "F403"]